# FastApiTesting

./: pyproject.toml  start.py
src/: crud.py  main.py  models.py
